--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,4 +5,4 @@ FILE(GLOB TEST_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
 source_group("test" FILES ${TEST_SRC})
 add_executable(raytrace_test ${TEST_SRC})
 target_include_directories(raytrace_test PRIVATE ../src)
-target_link_libraries(raytrace_test PRIVATE gtest gtest_main)
+target_link_libraries(raytrace_test PRIVATE gtest gtest_main raytracelib)
